# gukbot_v2

./: Pipfile  README.md  log.py  main.py  pyproject.toml
data/logfile/: log.txt
